--- a/templates/base.html
+++ b/templates/base.html
@@ -4,6 +4,9 @@
         <title>{{title}}</title>
     </head>
     <body>
+        <div>
+            <a href="/logout">log out</a>
+        </div>
         {% block content %}
         {% endblock %}
     </body>
